--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "next": "12.2.5",
+    "node": "^16.17.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spring": "^9.5.2",
+    "react-waypoint": "^10.3.0"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
