--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "^16.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spring": "^9.5.2",
     "react-waypoint": "^10.3.0"
   },
   "devDependencies": {
