--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "gsap": "^3.11.3",
     "next": "12.2.5",
     "node": "^16.17.0",
     "react": "18.2.0",
