--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.1",
     "gsap": "^3.11.3",
     "next": "12.2.5",
+    "nextjs-progressbar": "^0.0.16",
     "node": "^16.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
